testdata/baselines/reference/submodule/conformance/comparisonOperatorWithOneOperandIsUndefined.errors.txt
comparisonOperatorWithOneOperandIsUndefined.ts(6,22): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(7,22): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(8,23): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(9,23): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(15,18): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(16,18): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(17,18): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(18,18): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(34,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(35,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(36,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(37,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(38,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(39,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(40,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(42,16): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(43,16): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(44,16): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(45,16): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(46,16): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(47,16): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(48,16): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(51,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(52,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(53,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(54,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(55,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(56,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(57,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(59,16): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(60,16): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(61,16): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(62,16): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(63,16): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(64,16): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(65,16): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(68,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(69,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(70,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(71,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(72,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(73,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(74,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(76,17): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(77,17): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(78,17): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(79,17): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(80,17): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(81,17): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(82,17): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(85,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(86,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(87,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(88,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(89,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(90,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(91,12): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(93,17): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(94,17): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(95,17): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(96,17): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(97,17): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(98,17): error TS18048: 'x' is possibly 'undefined'.
comparisonOperatorWithOneOperandIsUndefined.ts(99,17): error TS18048: 'x' is possibly 'undefined'.


==== comparisonOperatorWithOneOperandIsUndefined.ts (64 errors) ====
    var x: typeof undefined;
    
    enum E { a, b, c }
    
    function foo<T>(t: T) {
        var foo_r1 = t < x;
                         ~
!!! error TS18048: 'x' is possibly 'undefined'.
        var foo_r2 = t > x;
                         ~
!!! error TS18048: 'x' is possibly 'undefined'.
        var foo_r3 = t <= x;
                          ~
!!! error TS18048: 'x' is possibly 'undefined'.
        var foo_r4 = t >= x;
                          ~
!!! error TS18048: 'x' is possibly 'undefined'.
        var foo_r5 = t == x;
        var foo_r6 = t != x;
        var foo_r7 = t === x;
        var foo_r8 = t !== x;
    
        var foo_r1 = x < t;
                     ~
!!! error TS18048: 'x' is possibly 'undefined'.
        var foo_r2 = x > t;
                     ~
!!! error TS18048: 'x' is possibly 'undefined'.
        var foo_r3 = x <= t;
                     ~
!!! error TS18048: 'x' is possibly 'undefined'.
        var foo_r4 = x >= t;
                     ~
!!! error TS18048: 'x' is possibly 'undefined'.
        var foo_r5 = x == t;
        var foo_r6 = x != t;
        var foo_r7 = x === t;
        var foo_r8 = x !== t;
    }
    
    var a: boolean;
    var b: number;
    var c: string;
    var d: void;
    var e: E;
    var f: {};
    var g: string[];
    
    // operator <
    var r1a1 = x < a;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r1a2 = x < b;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r1a3 = x < c;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r1a4 = x < d;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r1a5 = x < e;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r1a6 = x < f;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r1a7 = x < g;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    
    var r1b1 = a < x;
                   ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r1b2 = b < x;
                   ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r1b3 = c < x;
                   ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r1b4 = d < x;
                   ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r1b5 = e < x;
                   ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r1b6 = f < x;
                   ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r1b7 = g < x;
                   ~
!!! error TS18048: 'x' is possibly 'undefined'.
    
    // operator >
    var r2a1 = x > a;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r2a2 = x > b;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r2a3 = x > c;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r2a4 = x > d;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r2a5 = x > e;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r2a6 = x > f;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r2a7 = x > g;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    
    var r2b1 = a > x;
                   ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r2b2 = b > x;
                   ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r2b3 = c > x;
                   ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r2b4 = d > x;
                   ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r2b5 = e > x;
                   ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r2b6 = f > x;
                   ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r2b7 = g > x;
                   ~
!!! error TS18048: 'x' is possibly 'undefined'.
    
    // operator <=
    var r3a1 = x <= a;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r3a2 = x <= b;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r3a3 = x <= c;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r3a4 = x <= d;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r3a5 = x <= e;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r3a6 = x <= f;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r3a7 = x <= g;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    
    var r3b1 = a <= x;
                    ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r3b2 = b <= x;
                    ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r3b3 = c <= x;
                    ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r3b4 = d <= x;
                    ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r3b5 = e <= x;
                    ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r3b6 = f <= x;
                    ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r3b7 = g <= x;
                    ~
!!! error TS18048: 'x' is possibly 'undefined'.
    
    // operator >=
    var r4a1 = x >= a;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r4a2 = x >= b;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r4a3 = x >= c;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r4a4 = x >= d;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r4a5 = x >= e;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r4a6 = x >= f;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r4a7 = x >= g;
               ~
!!! error TS18048: 'x' is possibly 'undefined'.
    
    var r4b1 = a >= x;
                    ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r4b2 = b >= x;
                    ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r4b3 = c >= x;
                    ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r4b4 = d >= x;
                    ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r4b5 = e >= x;
                    ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r4b6 = f >= x;
                    ~
!!! error TS18048: 'x' is possibly 'undefined'.
    var r4b7 = g >= x;
                    ~
!!! error TS18048: 'x' is possibly 'undefined'.
    
    // operator ==
    var r5a1 = x == a;
    var r5a2 = x == b;
    var r5a3 = x == c;
    var r5a4 = x == d;
    var r5a5 = x == e;
    var r5a6 = x == f;
    var r5a7 = x == g;
    
    var r5b1 = a == x;
    var r5b2 = b == x;
    var r5b3 = c == x;
    var r5b4 = d == x;
    var r5b5 = e == x;
    var r5b6 = f == x;
    var r5b7 = g == x;
    
    // operator !=
    var r6a1 = x != a;
    var r6a2 = x != b;
    var r6a3 = x != c;
    var r6a4 = x != d;
    var r6a5 = x != e;
    var r6a6 = x != f;
    var r6a7 = x != g;
    
    var r6b1 = a != x;
    var r6b2 = b != x;
    var r6b3 = c != x;
    var r6b4 = d != x;
    var r6b5 = e != x;
    var r6b6 = f != x;
    var r6b7 = g != x;
    
    // operator ===
    var r7a1 = x === a;
    var r7a2 = x === b;
    var r7a3 = x === c;
    var r7a4 = x === d;
    var r7a5 = x === e;
    var r7a6 = x === f;
    var r7a7 = x === g;
    
    var r7b1 = a === x;
    var r7b2 = b === x;
    var r7b3 = c === x;
    var r7b4 = d === x;
    var r7b5 = e === x;
    var r7b6 = f === x;
    var r7b7 = g === x;
    
    // operator !==
    var r8a1 = x !== a;
    var r8a2 = x !== b;
    var r8a3 = x !== c;
    var r8a4 = x !== d;
    var r8a5 = x !== e;
    var r8a6 = x !== f;
    var r8a7 = x !== g;
    
    var r8b1 = a !== x;
    var r8b2 = b !== x;
    var r8b3 = c !== x;
    var r8b4 = d !== x;
    var r8b5 = e !== x;
    var r8b6 = f !== x;
    var r8b7 = g !== x;